# cookiecutter-data-science

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  README.md  pyproject.toml
