[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.repo_name }}"
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}" }
dynamic = ["version"]

[tool.setuptools]
packages = ["{{ cookiecutter.repo_name }}"]

[tool.setuptools.dynamic]
version = { attr = "{{ cookiecutter.repo_name }}.VERSION" }
